# QExtraWidgets

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  THIRD-PARTY  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyrefly.toml  requirements.txt  test_state.py
.agent/rules/: style-guide.md
.github/workflows/: docs.yml
.junie/: guidelines.md
MAINTAINER_GUIDE/: index.html
api/: index.html
demos/: accordion.py  accordion_grid.py  awesome_picker.py  color_button.py  dual_list.py  emoji_picker.py  extra_text_edit.py  filterable_table.py  grid_icon_view.py  icon_theme_responsive.py  pager.py  password.py  password_line_edit.py  responsive_text_edit.py  search_line_edit.py  simple_emoji_picker.py  twemoji_text_edit.py
deprecated/: emoji_delegate.py  emoji_text_document.py  emoji_text_edit.py
docs/: MAINTAINER_GUIDE.md  api.md  index.md
examples/fluent_widgets/: emoji_picker_example.py  twemoji_text_edit_example.py
examples/widgets/: emoji_picker_example.py  password_example.py  responsive_text_edit_example.py  theme_responsive_button_example.py  twemoji_text_edit_example.py
search/: search_index.json
source/extra_qwidgets/: emoji_utils.py  icons.py  utils.py
source/extra_qwidgets/abstract/: collapse_group.py  collapse_item.py  emoji_picker.py  metaclass.py  pager.py  single_selection_list.py  theme_responsive.py
source/extra_qwidgets/documents/: twemoji_text_document.py
source/extra_qwidgets/fluent_widgets/: collapse_group.py  collapse_item.py  extra_text_edit.py  pager.py  single_selection_list.py  theme_responsive_button.py  theme_responsive_toggle_button.py  theme_responsive_toggle_tool_button.py  theme_responsive_tool_button.py  theme_responsive_transparent_button.py  theme_responsive_transparent_toggle_button.py  theme_responsive_transparent_toggle_tool_button.py  theme_responsive_transparent_tool_button.py
source/extra_qwidgets/proxys/: emoji_sort_filter.py
source/extra_qwidgets/validators/: emoji_validator.py
source/extra_qwidgets/widgets/: accordion.py  accordion_item.py  collapse_group.py  collapse_item.py  dual_list.py  extra_text_edit.py  pager.py  password.py  single_selection_list.py  theme_responsive_action.py  theme_responsive_button.py  theme_responsive_list_item.py  theme_responsive_standard_item.py  theme_responsive_table_item.py  theme_responsive_tool_button.py
source/qextrawidgets/: __init__.py  emoji_utils.py  icons.py  utils.py
source/qextrawidgets/delegates/: __init__.py  grouped_icon_delegate.py  standard_twemoji_delegate.py
source/qextrawidgets/dialogs/: filter_popup.py
source/qextrawidgets/documents/: __init__.py  twemoji_text_document.py
source/qextrawidgets/icons/: __init__.py  theme_responsive_icon.py
source/qextrawidgets/items/: emoji_category_item.py  emoji_item.py
source/qextrawidgets/models/: emoji_picker_model.py
source/qextrawidgets/proxys/: __init__.py  emoji_picker_proxy.py  emoji_sort_filter.py  multi_filter.py
source/qextrawidgets/validators/: emoji_validator.py
source/qextrawidgets/widgets/: __init__.py  (+16 more)
tests/: tests.py
(+102 files in other folders)
