[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qextrawidgets"
version = "0.1.5"
description = "A collection of extra widgets for PySide6 including Emoji Picker, Filterable Table, and more."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Gustavo Pedroso Bernardes", email = "gpedrosobernardes@gmail.com"},
]
keywords = ["qt", "pyside6", "widgets", "emoji", "ui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: X11 Applications :: Qt",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Desktop Environment",
]
dependencies = [
    "PySide6>=6.10.1",
    "QtAwesome>=1.4.0",
    "emojis>=0.7.0",
    "twemoji-api>=1.0.2",
    "pydantic>=2.12.5",
]

[project.urls]
"Homepage" = "https://github.com/gpedrosobernardes/QExtraWidgets"
"Bug Tracker" = "https://github.com/gpedrosobernardes/QExtraWidgets/issues"

[tool.setuptools.packages.find]
where = ["source"]
include = ["qextrawidgets*"]
namespaces = false
