[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qextrawidgets"
version = "0.2.2"
description = "A collection of extra widgets for PySide6 including Emoji Picker, Filterable Table, and more."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Gustavo Pedroso Bernardes", email = "gpedrosobernardes@gmail.com"},
]
keywords = ["qt", "pyside6", "widgets", "emoji", "ui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: X11 Applications :: Qt",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Desktop Environment",
]
dependencies = [
    "PySide6>=6.10.1",
    "twemoji-api>=2.0.0",
    "emoji-data-python==1.6.0",
    "qtawesome==1.4.1"
]

[project.urls]
"Homepage" = "https://github.com/gpedrosobernardes/QExtraWidgets"
"Documentation" = "https://gpedrosobernardes.github.io/QExtraWidgets/"
"Bug Tracker" = "https://github.com/gpedrosobernardes/QExtraWidgets/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["source"]
include = ["qextrawidgets*"]
namespaces = false
